# UpstreamGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md
.github/workflows/: cmake.yml
UpstreamGL/: CMakeLists.txt
UpstreamGL/include/UpstreamGL/: Config.h  UpstreamGL.h
UpstreamGL/include/UpstreamGL/Components/: Camera.h  Canvas.h  Collider.h  Component.h  ComponentRegistry.h  Label.h  LayoutManager.h  Mesh.h  RigidBody.h  Transform.h
UpstreamGL/include/UpstreamGL/Debug/: Console.h  Debug.h  Logger.h  Profiler.h
UpstreamGL/include/UpstreamGL/Graphics/: Animation.h  Bone.h  Font.h  GLHelper.h  Material.h  MeshData.h  MeshObject.h  MeshRenderer.h  Quad.h  Renderable.h  Renderer.h  Shader.h  ShaderBuilder.h  Texture2D.h  Vertex.h
UpstreamGL/include/UpstreamGL/Input/: InputEvent.h  InputManager.h
UpstreamGL/include/UpstreamGL/Math/: AABB.h  AssimpGLMHelper.h  Math.h  ReactGLMHelper.h
UpstreamGL/include/UpstreamGL/Physics/: Collision.h  Physics.h  Raycast.h
UpstreamGL/include/UpstreamGL/Reflection/: BinarySerializer.h  ConstStr.h  JsonSerializer.h  MemberInfo.h  TypeInfo.h
UpstreamGL/include/UpstreamGL/Resources/: AnimationResource.h  MaterialManager.h  MeshResource.h  ShaderManager.h  TextureResource.h
UpstreamGL/include/UpstreamGL/Scene/: Director.h  Node.h  Scene.h
UpstreamGL/include/UpstreamGL/System/: Application.h  BlockList.h  Delegate.h  Entry.h  Event.h  EventDispatcher.h  File.h  ID.h  Scheduler.h  Timer.h  Window.h
UpstreamGL/src/Components/: Camera.cpp  Canvas.cpp  Collider.cpp  Component.cpp  Label.cpp  LayoutManager.cpp  Mesh.cpp  RigidBody.cpp  Transform.cpp
UpstreamGL/src/Debug/: Console.cpp  Logger.cpp  Profiler.cpp
UpstreamGL/src/Graphics/: Animation.cpp  Bone.cpp  Font.cpp  GLHelper.cpp  Material.cpp  MeshData.cpp  MeshObject.cpp  Renderer.cpp  Shader.cpp  ShaderBuilder.cpp  Texture2D.cpp
UpstreamGL/src/Math/: Math.cpp  ReactGLMHelper.cpp
UpstreamGL/src/Physics/: Physics.cpp  Raycast.cpp
UpstreamGL/src/Resources/: AnimationResource.cpp  MeshResource.cpp  ShaderManager.cpp  TextureResource.cpp
UpstreamGL/src/Scene/: Director.cpp  Node.cpp  Scene.cpp
UpstreamGL/src/System/: Application.cpp  File.cpp  ID.cpp  Scheduler.cpp  Timer.cpp  Window.cpp
UpstreamGLib/: CMakeLists.txt  main.cpp
UpstreamGLib/include/UpstreamGL/: Config.h  UpstreamGL.h
UpstreamGLib/include/UpstreamGL/Components/: Camera.h
UpstreamGLib/include/UpstreamGL/Debug/: Debug.h  Profiler.h
UpstreamGLib/include/UpstreamGL/Graphics/: Bone.h  Renderable.h  Shader.h  Texture2D.h
UpstreamGLib/include/UpstreamGL/Input/: InputEvent.h  InputManager.h
UpstreamGLib/include/UpstreamGL/Math/: Math.h
UpstreamGLib/include/UpstreamGL/Scene/: Director.h
UpstreamGLib/include/UpstreamGL/System/: Delegate.h  File.h  Window.h
UpstreamGLib/resources/: Cube.fbx  simpleSkinnedShader.vert
UpstreamGLib/src/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentRegistry.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h
UpstreamGLib/src/Components/GUI/: Image.cpp  Image.h  RectTransform.cpp  RectTransform.h
UpstreamGLib/src/Debug/: Console.cpp  Console.h  Debug.h  Logger.cpp  Logger.h  Profiler.cpp  Profiler.h
UpstreamGLib/src/Graphics/: Animation.cpp  Animation.h  Bone.cpp  Bone.h  GLHelper.cpp  GLHelper.h  GUIRenderer.cpp  GUIRenderer.h  Material.cpp  Material.h  MeshData.cpp  MeshData.h  MeshRenderer.cpp  Quad.cpp  Quad.h  Renderable.h  Shader.cpp  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  Texture2D.cpp  Texture2D.h  Vertex.h
UpstreamGLib/src/Input/: InputEvent.h  InputManager.cpp
UpstreamGLib/src/Math/: AABB.h  AssimpGLMHelper.h  Math.cpp  Math.h
UpstreamGLib/src/Resources/: AnimationResource.cpp  AnimationResource.h  MaterialManager.cpp  MaterialManager.h  MeshResource.cpp  MeshResource.h  Resource.h  ShaderManager.cpp  ShaderManager.h  TextureResource.cpp  TextureResource.h
UpstreamGLib/src/Scene/: Director.cpp  Director.h  Node.cpp  Node.h  Scene.cpp  Scene.h
UpstreamGLib/src/System/: Application.cpp  Application.h  Delegate.h  Entry.h  EventDispatcher.h  File.cpp  File.h  Hash.h  Scheduler.cpp  Scheduler.h  Window.cpp  Window.h
example/: CMakeLists.txt  CameraController.h  main.cpp  testMenu.cpp  testMenu.h
example/resources/: animationTestCube.fbx  astronaut.fbx  simpleShader.frag  simpleShader.vert
libraries/: CMakeLists.txt
libraries/glad/: CMakeLists.txt
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/imgui/: CMakeLists.txt  imconfig.h
libraries/stb/: CMakeLists.txt
libraries/stb/src/: stb_image.c  stb_image_write.c
tests/: BlockListTest.cpp  CMakeLists.txt  IdTest.cpp
tests/Base/: Assert.h
